--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="./styles.css">
-	<title>Learn ReactJS</title>
+	<title>ReactJS & Redux</title>
 </head>
 
 <body>
   <main id="app">
   </main>
 	<script src="https://content.codecademy.com/courses/React/react-16-redux-4-bundle.min.js"></script>
-  <script src="/index.compiled.js"></script>
+  <script src="index.compiled.js"></script>
 </body>
 
 </html>
